--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "./reset";
-@import "./variable";
+@import "config/variable";
 @import "font-awesome";
 @import "./index";
-
+@import "user";
+@import "flash";
+@import "group";
