--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,11 +2,12 @@
   .side
     .side--header
       .side--header--box 
-        .side--header__user user1
+        .side--header__user
+          = current_user.name
         .side--header__icon
-          =link_to "https://www.facebook.com/", class: "contents__btn contents__btn--facebook" do
+          =link_to new_group_path class: "contents__btn contents__btn--facebook" do
             = fa_icon "pencil-square-o", class: "side--header__icon1"
-          =link_to "https://twitter.com/", class: "contents__btn contents__btn--twitter" do
+          =link_to edit_user_path(current_user) ,class: "contents__btn contents__btn--twitter" do
             = fa_icon 'gear', class: "side--header__icon2"
     .side--groups         
       .side--groups__group
