--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -29,8 +29,8 @@
       .chat-group-form__field--right
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
         .check__box
-          =form_for(@group do |f|)
-            = f.collection_check_boxes()
+          /=form_for(@group do |f|)
+          
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
           <div id='chat-group-users'>
