root to:group#index

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,8 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'layouts/flash'
-    = render 'layouts/shared/side'            
     = yield
+    = render 'messages/index'    
+    
+           
+   
