--- a/app/views/messages/_index.html.haml
+++ b/app/views/messages/_index.html.haml
@@ -6,7 +6,7 @@
         .chat--header__name current_group
         .chat--header__member member:hatena
       .chat--header__edit
-        =link_to 'Edit','http://google.co.jp'
+        =link_to 'Edit', edit_group_path(@group)
         
     .chat--message  
       .chat--message__box 
