--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,7 +1,6 @@
 .side{
     width:300px;
     float:left;
-    height:1000px;
     &--header{
       background-color:#253141;
       height:100px;
@@ -31,8 +30,9 @@
       
     }
     &--groups{
+        overflow:scroll;
         background-color:#2f3e51;
-        height:1000px;
+        height: calc(100vh - 100px);
         padding-right:20px;
         padding-left:20px;
         &__group{
@@ -60,13 +60,12 @@
   }
 .chat{
     width:calc(100vw - 300px);
-    height:1000px;
     float:left;
     box-sizing:border-box;
     &--header{
       display:flex;
       justify-content: space-between;
-      height:100px;
+      
       padding-left:40px;
       border: solid 1px #eeeeee;
       &__name{
@@ -95,8 +94,10 @@
       
     }
     &--message{
+      height: calc(100vh - 280px);
       background-color:#fafafa;
       padding:46px 40px;
+      overflow:scroll;
       &__box{
         padding-bottom:40px;
         
@@ -125,6 +126,7 @@
       padding:20px 40px;
       background-color: #ddd;
       display:flex;
+
       &--input--box{
         width:100%;
         position:relative;
@@ -142,7 +144,7 @@
         &__image{
           position:absolute;
           top:15px;
-          right:10px;
+          right:120px;
           cursor:pointer;
           .fa{
             font-size:1.3rem;
@@ -154,7 +156,10 @@
         
 
       }
-      &--submit{
+
+
+      &__submit{
+        display:inline-block;
         width:100px;
         cursor:pointer;
         height:50px;
@@ -166,3 +171,12 @@
       }
     }
   }
+
+.new_message{
+  display:flex;
+}
+
+.side--header__icon a{
+  color:white;
+  text-decoration: none;
+}
