incrimental search create

--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -91,6 +91,9 @@
     .chat-group-user__name {
       float: left;
     }
+    .chat-group-user__names{
+      float:left;
+    }
 
     .chat-group-user__btn {
       float: right;
