[WIP]incrimental search create

--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -118,3 +118,10 @@
     border: 0;
   }
 }
+.chat-group-form__field--right{
+  margin-top:30px;
+}
+
+.chat-group-form__field--left{
+  margin-top:30px;
+}
