--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -12,7 +12,7 @@
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        %label.chat-group-form__label{:for => "user-search-field"}チャットメンバーを追加
+        %label.chat-group-form__label{for: "user-search-field"}チャットメンバーを追加
       .chat-group-form__field--right
         .chat-group-form__search.clearfix
           %input.chat-group-form__input{id: 'user-search-field',placeholder: '追加したいユーザー名を入力してください',type:'text',name:"keyword"}
@@ -20,8 +20,6 @@
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :user_ids, "チャットメンバー", class: 'chat-group-form__label'
- 
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
     .chat-group-form__field--right
       #chat-group-users
         - @group.users.each do |user|
